Update style and scripts

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,12 +1,10 @@
-preload = ~/Downloads/jellyfish.jpg
+preload = /home/jade/shared-across/wallpapers/wallpaper-30
+wallpaper = HDMI-A-1,~/shared-across/wallpapers/wallpaper-30
 
-#if more than one preload is desired then continue to preload other backgrounds
-#preload = /path/to/next_image.png
-# .. more preloads
+preload = /home/jade/shared-across/wallpapers/wallpaper-2
+wallpaper = DP-3,~/shared-across/wallpapers/wallpaper-2
 
-#set the default wallpaper(s) seen on inital workspace(s) --depending on the number of monitors used
-wallpaper = ,~/Downloads/jellyfish.jpg
 
-#if more than one monitor in use, can load a 2nd image
+#to use another monitor you need to preload image first
 # wallpaper = monitor2,/path/to/next_image.png
 # .. more monitors
