Random wallpaper icon on waybar

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,13 +1,3 @@
 
-#
-preload = /home/jade/shared-across/wallpapers/wallpaper-24
-wallpaper = HDMI-A-1,~/shared-across/wallpapers/wallpaper-24
-
-preload = /home/jade/shared-across/wallpapers/wallpaper-24
-wallpaper = DP-3,~/shared-across/wallpapers/wallpaper-24
-
-
-#to use another monitor you need to preload image first
-# wallpaper = monitor2,/path/to/next_image.png
-# .. more monitors
-
+preload = /home/jade/shared-across/wallpapers/wallpaper-28.jpg
+wallpaper = , /home/jade/shared-across/wallpapers/wallpaper-28.jpg
