--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,5 +1,3 @@
-
-
 ########################################################################################
 author: zft9xgy
 github: https://github.com/zft9xgy/dotfiles
@@ -182,8 +180,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, mouse_left, workspace, e+1
+bind = $mainMod, mouse_right, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -202,7 +200,12 @@ bind = $mainMod ALT, down, resizeactive, 0 20
 
 
 # Audio control
-bind = $mainMod, F12, exec, playerctl volume 0.2+
-bind = $mainMod, F11, exec, playerctl volume 0.2-
+bind = $mainMod SHIFT, mouse_left, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
+bind = $mainMod SHIFT, mouse_right, exec, pactl set-sink-volume @DEFAULT_SINK@ -10% 
+
+bind = $mainMod, F12, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
+bind = $mainMod, F11, exec, pactl set-sink-volume @DEFAULT_SINK@ -10% 
+
 bind = $mainMod, F10, exec, playerctl next
 bind = $mainMod, F9, exec, playerctl play-pause
+
