Adding pywal config to hyprland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,13 +7,13 @@ status: unfinished
 
 
 #default
-#monitor=,highres,auto,auto
+monitor=,highres,0x0,auto
 
 # main desktop jade aoc hor + dell 50
-monitor=HDMI-A-1,highres,0x0,auto
-monitor=DP-3,highres,1920x-550,1,transform,1
-workspace=HDMI-A-1,1
-workspace=DP-3,3
+#monitor=HDMI-A-1,highres,0x0,auto
+#monitor=DP-3,highres,1920x-550,1,transform,1
+#workspace=HDMI-A-1,1
+#workspace=DP-3,3
 
 # macbook air - select one
 # monitor 1472 x 956
@@ -29,11 +29,12 @@ workspace=DP-3,3
 exec-once = waybar & hyprpaper
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = sh ~/shared-across/opt/gamma-auto.sh
-exec-once = sh ~/shared-across/opt/filen.AppImage
+exec-once = filenio #sh ~/shared-across/opt/filen.AppImage
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 # Source a file (multi-file configs)
-source = ~/.config/hypr/mocha.conf
+source = ~/.cache/wal/colors-hyprland.conf
+
 
 # Some default env vars.
 #env = XCURSOR_SIZE,16
@@ -63,26 +64,46 @@ general {
     gaps_in = 5
     gaps_out = 5
     border_size = 2
-    col.active_border = rgb($yellow) #rgb($sapphire) 45deg
-    col.inactive_border = rgb($crust)
-
+    col.active_border = $color11 #rgb($sapphire) 45deg
+    col.inactive_border = $color0
     layout = dwindle
 }
 
-decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+# decoration {
+#     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
+#     rounding = 5
+#     blur {
+#         enabled = true
+#         size = 3
+#         passes = 1
+#     }
+
+#     drop_shadow = yes
+#     shadow_range = 4
+#     shadow_render_power = 3
+#     col.shadow = rgba(1a1a1aee)
+# }
+
+decoration {
     rounding = 5
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 6
+        passes = 2
+        new_optimizations = on
+        ignore_opacity = true
+        xray = true
+        # blurls = waybar
     }
+    active_opacity = 1.0
+    inactive_opacity = 0.8
+    fullscreen_opacity = 1.0
 
-    drop_shadow = yes
-    shadow_range = 4
+    drop_shadow = true
+    shadow_range = 30
     shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    col.shadow = 0x66000000
 }
 
 animations {
@@ -138,8 +159,7 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, Q, killactive, 
-bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, dolphin
+bind = $mainMod, E, exec, thunar
 bind = $mainMod, T, togglefloating, 
 bind = $mainMod, SPACE, exec, wofi --show drun
 bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
