Adding pywal config to wofi and update pywal template

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -156,6 +156,8 @@ misc {
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
+windowrule=float,^(kitty)$
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, Q, killactive, 
