--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
 
-preload = /home/jade/shared-across/wallpapers/wallpaper-10.jpg
-wallpaper = , /home/jade/shared-across/wallpapers/wallpaper-10.jpg
+preload = /home/jade/shared-across/wallpapers/wallhaven-858x21_1920x1080.png
+wallpaper = , /home/jade/shared-across/wallpapers/wallhaven-858x21_1920x1080.png
