--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -170,7 +170,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, exec, firefox 
 bind = $mainMod ALT, F, fullscreen
 bind = $mainMod, S, exec, grim -g "$(slurp)"
-
+bind = $mainMod SHIFT, W, exec, ~/shared-across/dotfiles/scripts/select-wall.sh
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
@@ -227,7 +227,4 @@ bind = $mainMod SHIFT, mouse_right, exec, pactl set-sink-volume @DEFAULT_SINK@ -
 
 bind = $mainMod, F12, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
 bind = $mainMod, F11, exec, pactl set-sink-volume @DEFAULT_SINK@ -10% 
-
-bind = $mainMod, F10, exec, playerctl next
-bind = $mainMod, F9, exec, playerctl play-pause
 
