--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
 
-preload = /home/jade/shared-across/wallpapers/wallhaven-858x21_1920x1080.png
-wallpaper = , /home/jade/shared-across/wallpapers/wallhaven-858x21_1920x1080.png
+preload = /home/jade/shared-across/wallpapers/wallhaven-x6pl9v.jpg
+wallpaper =,/home/jade/shared-across/wallpapers/wallhaven-x6pl9v.jpg
