--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -28,9 +28,12 @@ monitor=,highres,0x0,auto
 # Execute at launch
 exec-once = waybar & hyprpaper
 exec-once = wl-paste --type text --watch cliphist store
-exec-once = sh ~/shared-across/opt/gamma-auto.sh
+exec-once = gamma #sh ~/shared-across/dotfiles/scripts/gamma-auto.sh
 exec-once = filenio #sh ~/shared-across/opt/filen.AppImage
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
+
+# rules for poolkit to always open as floatwindows
+windowrule=float,^(polkit-kde-authentication-agent-1)$
 
 # Source a file (multi-file configs)
 source = ~/.cache/wal/colors-hyprland.conf
@@ -89,15 +92,15 @@ decoration {
     rounding = 5
     blur {
         enabled = true
-        size = 6
-        passes = 2
+        size = 3
+        passes = 1
         new_optimizations = on
         ignore_opacity = true
         xray = true
         # blurls = waybar
     }
     active_opacity = 1.0
-    inactive_opacity = 0.8
+    inactive_opacity = 1.0
     fullscreen_opacity = 1.0
 
     drop_shadow = true
@@ -163,19 +166,22 @@ bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, T, togglefloating, 
-bind = $mainMod, SPACE, exec, wofi --show drun
+bindr = $mainMod, SPACE, exec, pkill wofi || wofi
 bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, exec, firefox 
 bind = $mainMod ALT, F, fullscreen
 bind = $mainMod, S, exec, grim -g "$(slurp)"
+#bind = $mainMod SHIFT, 4, exec, grim -g "$(slurp)"
 bind = $mainMod SHIFT, W, exec, ~/shared-across/dotfiles/scripts/select-wall.sh
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -228,3 +234,13 @@ bind = $mainMod SHIFT, mouse_right, exec, pactl set-sink-volume @DEFAULT_SINK@ -
 bind = $mainMod, F12, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
 bind = $mainMod, F11, exec, pactl set-sink-volume @DEFAULT_SINK@ -10% 
 
+binde =, XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
+binde =, XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -10% 
+#bind =, XF86AudioMute exec, pactl set-sink-volume @DEFAULT_SINK@ -100% 
+
+
+
+
+
+bind = ALT, Tab, cyclenext
+bind = ALT, Tab, bringactivetotop
