--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
 
-preload = /home/jade/shared-across/wallpapers/wallhaven-x6pl9v.jpg
-wallpaper =,/home/jade/shared-across/wallpapers/wallhaven-x6pl9v.jpg
+preload = /home/jade/shared-across/wallpapers/wallpaperflare.com_wallpaper(7).jpg
+wallpaper =,/home/jade/shared-across/wallpapers/wallpaperflare.com_wallpaper(7).jpg
