--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -28,8 +28,8 @@ monitor=,highres,0x0,auto
 # Execute at launch
 exec-once = waybar & hyprpaper
 exec-once = wl-paste --type text --watch cliphist store
-exec-once = gamma #sh ~/shared-across/dotfiles/scripts/gamma-auto.sh
-exec-once = filenio #sh ~/shared-across/opt/filen.AppImage
+exec-once = ~/shared-across/dotfiles/scripts/gamma-auto.sh
+exec-once = ~/shared-across/opt/filen.AppImage
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 # rules for poolkit to always open as floatwindows
@@ -173,13 +173,18 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, exec, firefox 
 bind = $mainMod ALT, F, fullscreen
 bind = $mainMod, S, exec, grim -g "$(slurp)"
-#bind = $mainMod SHIFT, 4, exec, grim -g "$(slurp)"
 bind = $mainMod SHIFT, W, exec, ~/shared-across/dotfiles/scripts/select-wall.sh
+bind = $mainMod SHIFT, T, exec, telegram-desktop
+bind = $mainMod, G, exec, google-chrome-stable
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+# zenmode
+bindr = $mainMod ALT, D, exec, pkill waybar || waybar
 
 
 
@@ -238,9 +243,19 @@ binde =, XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
 binde =, XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -10% 
 #bind =, XF86AudioMute exec, pactl set-sink-volume @DEFAULT_SINK@ -100% 
 
-
-
-
-
 bind = ALT, Tab, cyclenext
 bind = ALT, Tab, bringactivetotop
+
+
+bind = $mainMod SHIFT, R, exec, sh ~/shared-across/dotfiles/scripts/reload.sh
+
+
+
+binde = , XF86MonBrightnessDown, exec, ddcutil setvcp 10 - 10
+binde = , XF86MonBrightnessUp, exec, ddcutil setvcp 10 + 10
+
+binde = $mainMod, XF86MonBrightnessDown, exec, ddcutil setvcp 10 - 100
+binde = $mainMod, XF86MonBrightnessUp, exec, ddcutil setvcp 10 + 100
+
+binde = ALT, XF86MonBrightnessDown, exec, ddcutil setvcp 12 - 10
+binde = ALT, XF86MonBrightnessUp, exec, ddcutil setvcp 12 + 10
