--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
 
-preload = /home/jade/shared-across/wallpapers/wallpaperflare.com_wallpaper(7).jpg
-wallpaper =,/home/jade/shared-across/wallpapers/wallpaperflare.com_wallpaper(7).jpg
+preload = /home/jade/shared-across/wallpapers/wallpaperflare.com_wallpaper(4)wallwall.jpg
+wallpaper =,/home/jade/shared-across/wallpapers/wallpaperflare.com_wallpaper(4)wallwall.jpg
