Thunar right click to open kitty here and set hyprpaper with right click

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -241,7 +241,8 @@ bind = $mainMod, F11, exec, pactl set-sink-volume @DEFAULT_SINK@ -10%
 
 binde =, XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
 binde =, XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -10% 
-#bind =, XF86AudioMute exec, pactl set-sink-volume @DEFAULT_SINK@ -100% 
+binde =, XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+
 
 bind = ALT, Tab, cyclenext
 bind = ALT, Tab, bringactivetotop
@@ -259,3 +260,6 @@ binde = $mainMod, XF86MonBrightnessUp, exec, ddcutil setvcp 10 + 100
 
 binde = ALT, XF86MonBrightnessDown, exec, ddcutil setvcp 12 - 10
 binde = ALT, XF86MonBrightnessUp, exec, ddcutil setvcp 12 + 10
+
+
+bind = ALT, mouse:273, exec, thunar ~/
