Adding swaylock, wlogout with pywal integration

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -167,7 +167,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, T, togglefloating, 
 bindr = $mainMod, SPACE, exec, pkill wofi || wofi
-bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, exec, firefox 
@@ -176,6 +176,8 @@ bind = $mainMod, S, exec, grim -g "$(slurp)"
 bind = $mainMod SHIFT, W, exec, ~/shared-across/dotfiles/scripts/select-wall.sh
 bind = $mainMod SHIFT, T, exec, telegram-desktop
 bind = $mainMod, G, exec, google-chrome-stable
+bind = ALT, mouse:273, exec, thunar ~/
+binde =$mainMod, L, exec, swaylock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -232,6 +234,9 @@ bind = $mainMod ALT, down, resizeactive, 0 20
 
 
 
+
+
+
 # Audio control
 bind = $mainMod SHIFT, mouse_left, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
 bind = $mainMod SHIFT, mouse_right, exec, pactl set-sink-volume @DEFAULT_SINK@ -10% 
@@ -262,4 +267,4 @@ binde = ALT, XF86MonBrightnessDown, exec, ddcutil setvcp 12 - 10
 binde = ALT, XF86MonBrightnessUp, exec, ddcutil setvcp 12 + 10
 
 
-bind = ALT, mouse:273, exec, thunar ~/
+
