--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -178,6 +178,7 @@ bind = $mainMod SHIFT, T, exec, telegram-desktop
 bind = $mainMod, G, exec, google-chrome-stable
 bind = ALT, mouse:273, exec, thunar ~/
 binde =$mainMod, L, exec, swaylock
+bindr =$mainMod, M, exec, pkill wlogout || wlogout 
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
