--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
 
-preload = /home/jade/shared-across/wallpapers/wallpaperflare.com_wallpaper
-wallpaper =,/home/jade/shared-across/wallpapers/wallpaperflare.com_wallpaper
+preload = /home/jade/shared-across/wallpapers/wallpaperflare.com_wallpaper(9)
+wallpaper =,/home/jade/shared-across/wallpapers/wallpaperflare.com_wallpaper(9)
