Change structure and added dunst

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -27,17 +27,18 @@ monitor=,highres,0x0,auto
 
 # Execute at launch
 exec-once = waybar & hyprpaper
+exec-once = dunst
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = ~/shared-across/dotfiles/scripts/gamma-auto.sh
+exec-once = ~/shared-across/dotfiles/scripts/autolock.sh
 exec-once = ~/shared-across/opt/filen.AppImage
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 # rules for poolkit to always open as floatwindows
-windowrule=float,^(polkit-kde-authentication-agent-1)$
+windowrule=float,org.kde.polkit-kde-authentication-agent-1
 
 # Source a file (multi-file configs)
 source = ~/.cache/wal/colors-hyprland.conf
-
 
 # Some default env vars.
 #env = XCURSOR_SIZE,16
@@ -122,6 +123,8 @@ animations {
     animation = workspaces, 1, 6, default
 }
 
+
+
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -177,8 +180,10 @@ bind = $mainMod SHIFT, W, exec, ~/shared-across/dotfiles/scripts/select-wall.sh
 bind = $mainMod SHIFT, T, exec, telegram-desktop
 bind = $mainMod, G, exec, google-chrome-stable
 bind = ALT, mouse:273, exec, thunar ~/
-binde =$mainMod, L, exec, swaylock
-bindr =$mainMod, M, exec, pkill wlogout || wlogout 
+bind = $mainMod, L, exec, swaylock
+bindr = $mainMod, M, exec, pkill wlogout || wlogout 
+bind = $mainMod, B, exec, kitty -e btop
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
