--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -253,6 +253,9 @@ bind = $mainMod, F11, exec, pactl set-sink-volume @DEFAULT_SINK@ -10%
 binde =, XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
 binde =, XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -10% 
 binde =, XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind =, XF86AudioNext, exec, playerctl next -p spotify
+bind =, XF86AudioPrev, exec, playerctl previous -p spotify
+bind =, xf86audioplay, exec, playerctl play-pause -p spotify
 
 
 bind = ALT, Tab, cyclenext
