--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
 
-preload = /home/jade/shared-across/wallpapers/wallpaperflare.com_wallpaper(11)wallwall
-wallpaper =,/home/jade/shared-across/wallpapers/wallpaperflare.com_wallpaper(11)wallwall
+preload = /home/jade/shared-across/wallpapers/wallpaper-18
+wallpaper =,/home/jade/shared-across/wallpapers/wallpaper-18
