--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -183,6 +183,7 @@ bind = ALT, mouse:273, exec, thunar ~/
 bind = $mainMod, L, exec, swaylock
 bindr = $mainMod, M, exec, pkill wlogout || wlogout 
 bind = $mainMod, B, exec, kitty -e btop
+bind = $mainMod ALT, P, exec, spotify-launcher
 
 
 # Move focus with mainMod + arrow keys
@@ -263,8 +264,6 @@ bind = ALT, Tab, bringactivetotop
 
 
 bind = $mainMod SHIFT, R, exec, sh ~/shared-across/dotfiles/scripts/reload.sh
-
-
 
 binde = , XF86MonBrightnessDown, exec, ddcutil setvcp 10 - 10
 binde = , XF86MonBrightnessUp, exec, ddcutil setvcp 10 + 10
