Changes to Dell 4k

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,19 +1,26 @@
-########################################################################################
-author: zft9xgy
-github: https://github.com/zft9xgy/dotfiles
-web: https://zft9xgy.github.io/zero/
-status: unfinished
-########################################################################################
+# author: zft9xgy
+# github: https://github.com/zft9xgy/dotfiles
+# web: https://zft9xgy.github.io/zero/
+# status: unfinished
 
 
 #default
-monitor=,highres,0x0,auto
-
+#monitor=,highres,0x0,1
+#monitor =,2560x1440,0x0,auto
+monitor=,highres,0x0,1.60
 # main desktop jade aoc hor + dell 50
 #monitor=HDMI-A-1,highres,0x0,auto
 #monitor=DP-3,highres,1920x-550,1,transform,1
 #workspace=HDMI-A-1,1
 #workspace=DP-3,3
+xwayland {
+  force_zero_scaling = true
+}
+
+
+# toolkit-specific scale
+env = GDK_SCALE,2
+env = XCURSOR_SIZE,32
 
 # macbook air - select one
 # monitor 1472 x 956
@@ -31,9 +38,9 @@ exec-once = dunst
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = ~/shared-across/dotfiles/scripts/gamma-auto.sh
 exec-once = ~/shared-across/dotfiles/scripts/autolock.sh
-exec-once = ~/shared-across/opt/filen.AppImage
+# exec-once = ~/shared-across/opt/filen.AppImage
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
-
+exec-once = OBSIDIAN_USE_WAYLAND=1 obsidian -enable-features=UseOzonePlatform -ozone-platform=wayland 
 # rules for poolkit to always open as floatwindows
 windowrule=float,org.kde.polkit-kde-authentication-agent-1
 
@@ -143,13 +150,13 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = 1
-}
+#device:epic-mouse-v1 {
+#    sensitivity = 1
+#}
 
 misc {
 	disable_hyprland_logo = true
-
+    disable_splash_rendering = true
 }
 
 # Example windowrule v1
