--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,4 @@
 
-preload = /home/jade/shared-across/wallpapers/wallpaper-11
-wallpaper =,/home/jade/shared-across/wallpapers/wallpaper-11
+preload = /home/jade/shared-across/wallpapers/lofi-coffee-shop-night-art-uhdpaper.com-4K-8.1367.jpg
+wallpaper =,/home/jade/shared-across/wallpapers/lofi-coffee-shop-night-art-uhdpaper.com-4K-8.1367.jpg
+splash = false
