--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -7,7 +7,9 @@
 #default
 #monitor=,highres,0x0,1
 #monitor =,2560x1440,0x0,auto
-monitor=,highres,0x0,1.60
+#monitor=,highres,0x0,1.60
+monitor=,highres,0x0,1.667
+
 # main desktop jade aoc hor + dell 50
 #monitor=HDMI-A-1,highres,0x0,auto
 #monitor=DP-3,highres,1920x-550,1,transform,1
@@ -40,7 +42,7 @@ exec-once = ~/shared-across/dotfiles/scripts/gamma-auto.sh
 exec-once = ~/shared-across/dotfiles/scripts/autolock.sh
 # exec-once = ~/shared-across/opt/filen.AppImage
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = OBSIDIAN_USE_WAYLAND=1 obsidian -enable-features=UseOzonePlatform -ozone-platform=wayland 
+#exec-once = OBSIDIAN_USE_WAYLAND=1 obsidian -enable-features=UseOzonePlatform -ozone-platform=wayland 
 # rules for poolkit to always open as floatwindows
 windowrule=float,org.kde.polkit-kde-authentication-agent-1
 
@@ -140,7 +142,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    #new_is_master = true
 }
 
 gestures {
