--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
 
-preload = /home/jade/shared-across/wallpapers/lofi-coffee-shop-night-art-uhdpaper.com-4K-8.1367.jpg
-wallpaper =,/home/jade/shared-across/wallpapers/lofi-coffee-shop-night-art-uhdpaper.com-4K-8.1367.jpg
+preload = /home/jade/shared-across/misc/wallpapers/mountain-abstract-background-digital-art-4k-wallpaper-uhdpaper.com-188@3@a.jpg
+wallpaper =,/home/jade/shared-across/misc/wallpapers/mountain-abstract-background-digital-art-4k-wallpaper-uhdpaper.com-188@3@a.jpg
 splash = false
